# controller_lib

./: CMakeLists.txt
2d/pid_cascaded/include/: pid_cascaded.h
2d/pid_cascaded/src/: pid_cascaded.cpp
basic_controllers/: CMakeLists.txt
basic_controllers/pid/: pid.cpp  pid.h
quadcopter_controllers/: CMakeLists.txt
quadcopter_controllers/2d/pid_cascaded/include/: pid_cascaded.h
quadcopter_controllers/2d/pid_cascaded/src/: pid_cascaded.cpp  set_values.cpp
quadcopter_controllers/building_blocks/: CMakeLists.txt
quadcopter_controllers/building_blocks/attitude_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/attitude_controllers/roll_pitch_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/attitude_controllers/roll_pitch_controllers/basic_roll_pitch_controller/: basic_roll_pitch_controller.cpp  basic_roll_pitch_controller.h
quadcopter_controllers/building_blocks/axes_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/axes_controllers/decoupled_pid/: decoupled_pid.cpp  decoupled_pid.h
quadcopter_controllers/building_blocks/common/: CMakeLists.txt
quadcopter_controllers/building_blocks/common/axis_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/common/axis_controllers/basic_axis_controller/: basic_axis_controller.cpp  basic_axis_controller.h
quadcopter_controllers/building_blocks/controller_architectures/: CMakeLists.txt
quadcopter_controllers/building_blocks/controller_architectures/cascaded/: CMakeLists.txt  cascaded.cpp  cascaded.h
quadcopter_controllers/building_blocks/others/: CMakeLists.txt
quadcopter_controllers/building_blocks/others/quadcopter_properties/: quadcopter_properties.cpp  quadcopter_properties.h
quadcopter_controllers/building_blocks/position_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/position_controllers/horizontal_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/position_controllers/horizontal_controllers/basic_horizontal_controller/: basic_horizontal_controller.cpp  basic_horizontal_controller.h
quadcopter_controllers/building_blocks/position_controllers/vertical_controllers/: CMakeLists.txt
quadcopter_controllers/building_blocks/position_controllers/vertical_controllers/basic_vertical_controller/: basic_vertical_controller.cpp  basic_vertical_controller.h
quadcopter_controllers/building_blocks/quadcopter_properties/: CMakeLists.txt
quadcopter_controllers/building_blocks/quadcopter_properties/include/: quadcopter_properties.h
quadcopter_controllers/building_blocks/quadcopter_properties/src/: quadcopter_properties.cpp
quadcopter_controllers/full_controllers/: CMakeLists.txt
quadcopter_controllers/full_controllers/2d/: CMakeLists.txt
quadcopter_controllers/full_controllers/2d/basic_pid_cascaded/: CMakeLists.txt
quadcopter_controllers/full_controllers/2d/basic_pid_cascaded/include/: basic_pid_cascaded.h
quadcopter_controllers/full_controllers/2d/basic_pid_cascaded/src/: cascaded_controller.cpp  roll_angle_controller.cpp  set_values.cpp  y_position_controller.cpp  z_position_controller.cpp
quadcopter_controllers/full_controllers/3d/: CMakeLists.txt
quadcopter_controllers/full_controllers/3d/basic_pid_cascaded/include/: basic_pid_cascaded.h
quadcopter_controllers/full_controllers/3d/basic_pid_cascaded/src/: cascaded_controller.cpp  set_values.cpp
quadcopter_controllers/full_controllers/3d/basic_pid_cascaded_3d/: CMakeLists.txt
quadcopter_controllers/full_controllers/3d/basic_pid_cascaded_3d/include/: basic_pid_cascaded.h
quadcopter_controllers/full_controllers/3d/pid_cascaded/: CMakeLists.txt
quadcopter_controllers/full_controllers/3d/pid_cascaded/include/: pid_cascaded.h
quadcopter_controllers/full_controllers/3d/pid_cascaded/src/: angle_controllers.cpp  cascaded_controller.cpp  horizontal_controllers.cpp  roll_angle_controller.cpp  set_values.cpp  y_position_controller.cpp  z_position_controller.cpp
quadcopter_controllers/full_controllers/3d/pid_position/: CMakeLists.txt
quadcopter_controllers/full_controllers/3d/pid_position/include/: pid_position.h
quadcopter_controllers/full_controllers/3d/pid_position/src/: horizontal_controllers.cpp  position_controller.cpp  set_values.cpp  z_position_controller.cpp
quadcopter_controllers/full_controllers/basic_pid_cascaded/: CMakeLists.txt
quadcopter_controllers/full_controllers/basic_pid_cascaded/include/: basic_pid_cascaded.h
quadcopter_controllers/full_controllers/basic_pid_cascaded/src/: cascaded_controller.cpp  roll_angle_controller.cpp  set_gains.cpp  set_state_target.cpp  set_values.cpp  y_position_controller.cpp  z_position_controller.cpp
quadcopter_controllers/full_controllers/basic_pid_cascaded_3d/: CMakeLists.txt
quadcopter_controllers/full_controllers/basic_pid_cascaded_3d/src/: cascaded_controller.cpp  decoupled_pid_controllers.cpp
quadcopter_mixers/: CMakeLists.txt
quadcopter_mixers/2d/saturation_cutoff_mixer/include/: saturation_cutoff_mixer.h
quadcopter_mixers/2d/saturation_cutoff_mixer/src/: saturation_cutoff_mixer.cpp  set_values.cpp
quadcopter_mixers/saturation_cutoff_mixer/: CMakeLists.txt
quadcopter_mixers/saturation_cutoff_mixer/include/: saturation_cutoff_mixer.h
quadcopter_mixers/saturation_cutoff_mixer/src/: mixer.cpp  mixer_matrix_plus.cpp  mixer_matrix_x.cpp  saturation_cutoff_mixer.cpp  set_values.cpp
